# pup-mcp

./: .gitignore  PROGRESS.md  README.md  pyproject.toml  requirements.txt
.entire/: settings.json
35/dd7d024663/: metadata.json
35/dd7d024663/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
8b/5178853c65/: metadata.json
8b/5178853c65/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
pup_mcp/: server.py
src/pup_mcp/: __init__.py  exceptions.py  server.py
src/pup_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pup_mcp/models/: common.py  settings.py
src/pup_mcp/services/: datadog_client.py
src/pup_mcp/tools/: dashboards.py  downtimes.py  events.py  incidents.py  logs.py  metrics.py  monitors.py  rum.py  slos.py  synthetics.py  tags.py  users.py
src/pup_mcp/utils/: formatting.py  time_parser.py
tests/: conftest.py
tests/unit/: test_dashboards.py  test_datadog_client.py  test_downtimes.py  test_events.py  test_exceptions.py  test_formatting.py  test_incidents.py  test_input_models.py  test_logs.py  test_metrics.py  test_monitors.py  test_rum.py  test_server.py  test_settings.py  test_slos.py  test_synthetics.py  test_tags.py  test_time_parser.py  test_users.py
